Done with home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,111 @@
 <button class="btn--rounded btn-fill--white btn-txt--black border-0 lang-switcher">English</button>
 </div>
 </nav>
-    <slides-carousel></slides-carousel>
-<br>
-<div style="height: 10rem;"></div>
+
+<!------------------------------------Home Page --------------------------------------->
+<!--slider-->
+<!-- <slides-carousel></slides-carousel> -->
+
+<!--industrial-section-->
+<!-- <section class="industrial-sector">
+    <aside class=" side-menue side-menue--right">
+        <div class="side-menue-image-container">
+            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
+        </div>
+        <div class="side-menue-details">
+            <div class="side-menue-details-header-container">
+                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
+            </div>
+            <div class="side-menue-details-body">
+                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
+                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
+                     ويُستخدم في صناعات المطابع  ودور النشر.
+                     كان لوريم إيبسوم ولايزال المعيار 
+                     للنص الشكلي منذ القرن الخامس عشر 
+                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
+            </div>
+        </div>
+    </aside>
+
+
+    <div class="industrial-sector-details" style="width: 50rem;position: relative;">
+        <div class="industrial-sector-header-container">
+            <h3 class="industrial-sector__header-txt">القطاعات الصناعية</h3>
+        </div>
+    <muilt-rows-slider></muilt-rows-slider>
+    </div>
+
+    <aside class=" side-menue side-menue--left">
+        <div class="side-menue-image-container">
+            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
+        </div>
+        <div class="side-menue-details">
+            <div class="side-menue-details-header-container">
+                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
+            </div>
+            <div class="side-menue-details-body">
+                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
+                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
+                     ويُستخدم في صناعات المطابع  ودور النشر.
+                     كان لوريم إيبسوم ولايزال المعيار 
+                     للنص الشكلي منذ القرن الخامس عشر 
+                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
+            </div>
+        </div>
+    </aside>
+</section> -->
+
+
+<!--about Section -->
+<!-- <section class="about-portal">
+   <div class="section-header-container ">
+    <h3 class="headers-txt headers-txt--green mb-0">عن البوابه</h3>
+   </div>
+   <div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="about-portal-image-container ">
+                <img class="about-portal-image" src="../assets/images/view-of-factory.png">
+            </div>
+        </div>
+        <div class="col-6 info-section">
+            <div class="section-sub-header-container">
+                <h4 class="sub-header-txt sub-header-txt--black mb-0">دليل قطر الصناعى</h4>
+            </div>
+                <p class="section-details section-details--grey">
+                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة 
+                    عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف 
+                    التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان 
+                    كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا 
+                    وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع 
+                    الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك 
+                    وشركات التأمين وشركات النقل والتخليص الجمركى.
+                </p>
+                <div class="read-more-container">
+                    <a href="#" class="btn--trasnparent btn-txt--green btn--lit-rounded read-more">المزيد</a>
+                </div>
+            
+        </div>
+    </div> 
+    </div>
+</section> -->
+
+<!--sponsers banner section-->
+<!-- <section class="section-header-container">
+    <h3 class="headers-txt headers-txt--black">الرعاة المشاركون</h3>
+</section>
+ -->
+
+
+
+
+<!----------------------------------------------secound Page Details----------------------->
+<div class="page-banner">
+    <div class="page-banner-container">
+        <img class="page-banner__image" src="../assets/images/c1">
+    </div>
+</div>
+
 <!--Made in UAE info section-->
 <!-- <section class="site-guide">
     <div class="container">
@@ -50,96 +152,14 @@
 </section> -->
 
 
-<!--industrial-section-->
-<section class="industrial-sector">
-    <aside class=" side-menue side-menue--right">
-        <div class="side-menue-image-container">
-            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
-        </div>
-        <div class="side-menue-details">
-            <div class="side-menue-details-header-container">
-                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
-            </div>
-            <div class="side-menue-details-body">
-                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
-                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
-                     ويُستخدم في صناعات المطابع  ودور النشر.
-                     كان لوريم إيبسوم ولايزال المعيار 
-                     للنص الشكلي منذ القرن الخامس عشر 
-                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
-            </div>
-        </div>
-    </aside>
 
 
-    <div class="industrial-sector-details" style="width: 50rem;background: red;">
-        
-    <muilt-rows-slider></muilt-rows-slider>
-    </div>
-
-    <aside class=" side-menue side-menue--left">
-        <div class="side-menue-image-container">
-            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
-        </div>
-        <div class="side-menue-details">
-            <div class="side-menue-details-header-container">
-                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
-            </div>
-            <div class="side-menue-details-body">
-                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
-                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
-                     ويُستخدم في صناعات المطابع  ودور النشر.
-                     كان لوريم إيبسوم ولايزال المعيار 
-                     للنص الشكلي منذ القرن الخامس عشر 
-                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
-            </div>
-        </div>
-    </aside>
-</section>
 
 
-<!--about Section -->
-<section class="about-portal">
-   <div class="section-header-container ">
-    <h3 class="headers-txt headers-txt--green mb-0">عن البوابه</h3>
-   </div>
-   <div class="container">
-    <div class="row">
-        <div class="col-6">
-            <div class="about-portal-image-container ">
-                <img class="about-portal-image" src="../assets/images/view-of-factory.png">
-            </div>
-        </div>
-        <div class="col-6 info-section">
-            <div class="section-sub-header-container">
-                <h4 class="sub-header-txt sub-header-txt--black mb-0">دليل قطر الصناعى</h4>
-            </div>
-                <p class="section-details section-details--grey">
-                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة 
-                    عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف 
-                    التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان 
-                    كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا 
-                    وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع 
-                    الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك 
-                    وشركات التأمين وشركات النقل والتخليص الجمركى.
-                </p>
-                <div class="read-more-container">
-                    <a href="#" class="btn--trasnparent btn-txt--green btn--lit-rounded read-more">المزيد</a>
-                </div>
-            
-        </div>
-    </div> 
-    </div>
-</section>
-
-<!--sponsers banner section-->
-<section class="section-header-container">
-    <h3 class="headers-txt headers-txt--black">الرعاة المشاركون</h3>
-</section>
 <!--Footer-->
 <footer>
     <!--slider-->
-    <div class="slider">
+    <!-- <div class="slider">
         <div class="slide-track">
             <div class="slide">
                 <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt="" />
@@ -184,8 +204,8 @@
                 <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt="" />
             </div>
         </div>
-    </div>
-
+    </div> -->
+    <footer-slider></footer-slider>
     <!--fixed backgroud-->
     <div class="footer--bg"></div>
    <!--footer logo-->
