--- a/src/app/muilt-rows-slider/muilt-rows-slider.component.html
+++ b/src/app/muilt-rows-slider/muilt-rows-slider.component.html
@@ -1,20 +1,97 @@
 
-  <
-  <div class="swiper-container">
+  
+  <div class="swiper-container industries-slider">
         <div class="swiper-wrapper">
            
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-        <div class="swiper-slide"><img src="http://placehold.it/240x240" class="img-responsive"></div>
-              
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s1.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات الانشائيه</p>
+                </div>
+            </div>
+        </div>
+       
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s2.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات البلاستيكية</p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s3.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات الكيميائية</p>
+                </div>
+            </div>
         </div>
 
-        <div class="swiper-button-prev swiper-button-white"></div>
-        <div class="swiper-button-next swiper-button-white"></div>
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s1.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات الانشائيه</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s2.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات الكيميائية</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s3.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات الكيميائية</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s2.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات البلاستيكية</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="swiper-slide">
+            <div class="swiper-card">
+                <div class="swiper-card-image-container">
+                    <img class="swiper-card__img" src="../../assets/images/test images/s1.png">
+                </div>
+                <div class="swiper-card-details-container">
+                    <p class="swiper-card-details__txt">الصناعات الانشائيه</p>
+                </div>
+            </div>
+        </div>
+        </div>
+
     </div>
+    <div class="swiper-button-prev swiper-button-white"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
