--- a/src/sass/base/_media-query.scss
+++ b/src/sass/base/_media-query.scss
@@ -17,7 +17,7 @@
  } 
  @media (min-width: 1600px){
  .container {
-     max-width: 1425px;
+     max-width: 1425px !important;
  }
 }
 //  @media (min-width: 1641px) and (max-width: 1799px) { 
