--- a/src/sass/components/_slider-carousel.scss
+++ b/src/sass/components/_slider-carousel.scss
@@ -1,5 +1,6 @@
 .bs-big-carousel{
     //height: 48rem;
+    margin-bottom: 2.063rem;
     position: relative;
     .big-carousel-image{
         width: 100%;
