--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,10 +12,11 @@
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
+
 /*Import Layouts*/
  @import 'layout/nav';
  @import 'layout/footer';
- 
+@import'layout/banner'; 
 
 
 
