--- a/src/sass/components/_muilt-row-slider.scss
+++ b/src/sass/components/_muilt-row-slider.scss
@@ -1,5 +1,5 @@
 
-
+.industries-slider{
 .container {
     width: 100%;
     max-width: 1170px;
@@ -7,22 +7,59 @@
     margin: 0 auto;
 }
 
-.img-responsive {
-    display: block;
-    max-width: 100%;
-    height: auto;
+
+
+.swiper-card{
+    display: flex;
+    flex-direction: column;
+    width: 15.563rem;
+    background-color:$secondary-color ;
+    height: 15.625rem;
+    border-radius: 10px 10px 10px 10px;
+    border: 1px solid $black;
+    overflow: hidden;
+    &-image-container{
+        border-radius: 0px 0px 10px 10px;
+        overflow: hidden;
+        background-color: $white;
+        height:  12.75rem;
+        padding: 1rem;
+    }
+    &__img{
+        width: 100%;
+        height: 100%;
+    }
+    &-details-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        flex: 1;
+    }
+    &-details__txt{
+        color: $white;
+        font-size:1.25rem ;
+        font-family: $font-family-base;
+        line-height: 1.5rem;
+        margin-bottom: 0;
+    }
+
+}
+}
+.swiper-button-next.swiper-button-white, .swiper-button-prev.swiper-button-white{
+    top: 43rem;
+    background-color: $white;
+    border-radius: 10px;
+    width: 1.875rem;
+    height: 1.875rem;
+    &:after{
+        font-size: 0.875rem;
+        color: #000;
+        font-weight: bold;
+    }
 }
 
-.swiper-slide span {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    background-color: black;
-    color: white;
-    padding: 6px;
-    display: block;
-    font-size: 20px;
-    width: 35px;
-    height: 35px;
-    text-align: center;
+.swiper-button-next, .swiper-container-rtl .swiper-button-prev{
+    #{$opposite-float}: 3rem;
+    right: auto;
 }
