--- a/src/sass/components/_search-fied.scss
+++ b/src/sass/components/_search-fied.scss
@@ -6,19 +6,20 @@
     height: 5.375rem;
     align-items: center;
     display: flex;
+    justify-content: center;
     .search-input-field{
         height: 3.75rem;
         width: 65.125rem;
-        margin: 0 auto;
+       
         border-radius: 2rem;
         border:0px;
        position: relative;
        padding-#{$default-float}:4.25rem ;
     }
     .search-btn{
-        position: absolute;
-        #{$default-float}: 10.9rem;
-        top: .5rem;
+        position: relative;
+        #{$opposite-float}: 63.5rem;
+        top: 3px;
         bottom: 0;
         background-color: transparent;
         border: none;
