done with Details Page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,12 +115,15 @@
 <!----------------------------------------------secound Page Details----------------------->
 <div class="page-banner">
     <div class="page-banner-container">
-        <img class="page-banner__image" src="../assets/images/c1">
+        <div class="page-banner-content-container">
+            <img class="page-banner__image" src="../assets/images/c1.jpg">
+            <h2 class="page-banner__header">عن البوابة</h2>
+        </div>
     </div>
 </div>
 
 <!--Made in UAE info section-->
-<!-- <section class="site-guide">
+<section class="site-guide">
     <div class="container">
         <div class="row">
             <div class="uae-info-header-container">
@@ -149,7 +152,7 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
 
 
 
