--- a/src/sass/layout/_banner.scss
+++ b/src/sass/layout/_banner.scss
@@ -1,7 +1,40 @@
+
 .page-banner{
-   height:26.217rem;
-   border-bottom-right-radius: 1rem;
-   border-bottom-left-radius: 1rem;
-   transform: rotate(10deg);
-   background-color: red;
+    overflow: hidden;
+    margin-bottom: 1.344rem;
+        &-container{
+        height:26.217rem;
+        border-bottom-right-radius: 9rem;
+        border-bottom-left-radius: 7rem;
+        transform: rotate(-4deg);
+        background-color: whitesmoke;
+        position: relative;
+        top: -5rem;
+        width: 102vw;
+        overflow: hidden;
+        #{$opposite-float}:1rem
+        }
+        &-content-container{
+            width: 100%;
+            height: 120%;
+            transform: rotate(4deg);
+            display: flex;
+        }
+        &__image{
+            width: 100%;
+            height: 100%;
+        }
+        &__header{
+            position: absolute;
+            top: 50%;
+            color: $white;
+            right: 50%;
+            transform: translateX(50%);
+            font-size: 3.5rem;
+            font-family: $font-family-base;
+
+        }
+}
+.page-panner-image-container{
+
 }
