pre Add-factory commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,7 +112,7 @@
 
 
 
-<!----------------------------------------------secound Page Details----------------------->
+<!---------------------------------------------- Pages Shared Bannrr Details----------------------->
 <div class="page-banner">
     <div class="page-banner-container">
         <div class="page-banner-content-container">
@@ -122,8 +122,10 @@
     </div>
 </div>
 
+<!-----------------------------------------------Secound Page Details------------------------->
+
 <!--Made in UAE info section-->
-<section class="site-guide">
+<!-- <section class="site-guide">
     <div class="container">
         <div class="row">
             <div class="uae-info-header-container">
@@ -152,13 +154,48 @@
             </div>
         </div>
     </div>
+</section> -->
+
+
+<!-----------------------------------------------third Page Create Factory--------------------->
+
+<!--Create factory form-->
+<section class="Create-Factory">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+                <div class="input-form">
+                    <label class="input-form__label" for="Factoryname-arabic">
+                        اسم الشركة / المصنع
+                    </label>
+                    <input type="text" class="input-form__txt" id="Factoryname-arabic" placeholder="اسم الشركة / المصنع باللغة العربية">
+                    <input type="text" class="input-form__txt" id="Factoryname-english" placeholder="اسم الشركة / المصنع باللغة الانجليزية">
+
+                </div>
+
+                <div class="input-form">
+                    <label class="input-form__label" for="about-Factory-arabic">
+                        عن الشركة / المصنع
+                    </label>
+                    <textarea type="text" class="input-form__txt" id="about-Factory-arabic" placeholder="نبذة عن الشركة / المصنع باللغة العربية"></textarea>
+                    <textarea type="text" class="input-form__txt" id="about-Factory-english" placeholder="نبذة عن الشركة / المصنع باللغة الانجليزية"></textarea>
+                </div>
+
+                <div class="input-form">
+                    <label class="input-form__label" for="Factory-sector">
+                        نوع القطاع
+                    </label>
+                    <select  class="input-form__select" id="Factory-sector" >
+                        <option value="قطاع صناعي">قطاع صناعي</option>
+                        <option value="قطاع صناعي">قطاع صناعي</option>
+
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-
-
-
-
-
-
 <!--Footer-->
 <footer>
     <!--slider-->
