--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
  @import 'components/slider-carousel';
  @import 'components/search-fied';
  @import 'components/muilt-row-slider';
+ @import 'components/input-form';
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
