--- a/src/sass/components/_btns.scss
+++ b/src/sass/components/_btns.scss
@@ -39,7 +39,27 @@
         transition: .5s;
         line-height: 1;
         border:3px solid $white;
+        cursor: pointer;
 
+    }
+    &--submit{
+        padding-left:2.5rem;
+        padding-right: 2.5rem;
+        padding-top:0.938rem;
+        padding-bottom:0.938rem;
+        font-size: 1.25rem;
+        font-family: $font-family-base;
+        font-weight: bold;
+        text-decoration: none;
+        transition: .5s;
+        line-height: 1;
+        border:3px solid $primary-color;
+        cursor: pointer;
+        transition: .2s;
+        &:hover{
+            color: $white;
+            background-color: $primary-color;
+        }
     }
 
 }
