--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -165,6 +165,7 @@
         <div class="row">
             <div class="col">
 
+                <!-- اسم الشركة / المصنع-->
                 <div class="input-form">
                     <label class="input-form__label" for="Factoryname-arabic">
                         اسم الشركة / المصنع
@@ -174,6 +175,7 @@
 
                 </div>
 
+                <!--عن الشركة / المصنع-->
                 <div class="input-form">
                     <label class="input-form__label" for="about-Factory-arabic">
                         عن الشركة / المصنع
@@ -182,15 +184,85 @@
                     <textarea type="text" class="input-form__txt" id="about-Factory-english" placeholder="نبذة عن الشركة / المصنع باللغة الانجليزية"></textarea>
                 </div>
 
-                <div class="input-form">
-                    <label class="input-form__label" for="Factory-sector">
+                <!--نوع القطاع-->
+                <div class="input-form position-relative">
+                    <label class="input-form__label select__label" for="Factory-sector">
                         نوع القطاع
                     </label>
                     <select  class="input-form__select" id="Factory-sector" >
                         <option value="قطاع صناعي">قطاع صناعي</option>
                         <option value="قطاع صناعي">قطاع صناعي</option>
-
+                        
                     </select>
+                    <span class="icon-Icon-arrow rotate-down black-colored-txt drop-down-arrow select-arrow"></span>
+                </div>
+
+                <!--  العنوان-->
+                <div class="input-form">
+                    <label class="input-form__label" for="Factory-address-arabic">
+                        العنوان
+                    </label>
+                    <input type="text" class="input-form__txt" id="Factory-address-arabic" placeholder="العنوان باللغة العربية">
+                    <input type="text" class="input-form__txt" id="Factory-address-english" placeholder="العنوان باللغة الانجليزية">
+
+                </div>
+
+                <!--الهاتف-->
+                <div class="input-form">
+                    <label class="input-form__label" for="phone-number">
+                        العنوان
+                    </label>
+                    <input type="text" class="input-form__txt" id="phone-number" placeholder="رقم الهاتف">
+
+                </div>
+
+                <!--فاكس-->
+                <div class="input-form">
+                    <label class="input-form__label" for="fax-number">
+                        فاكس
+                    </label>
+                    <input type="text" class="input-form__txt" id="fax-number" placeholder="رقم الفاكس">
+                </div>
+
+                <!--الموقع الالكترونى-->
+                <div class="input-form">
+                    <label class="input-form__label" for="website">
+                        الموقع الالكترونى
+                    </label>
+                    <input type="text" class="input-form__txt" id="website" placeholder="الموقع الالكترونى">
+                </div>
+
+                <!--البريد الالكترونى-->
+                <div class="input-form">
+                    <label class="input-form__label" for="email">
+                        البريد الالكترونى
+                    </label>
+                    <input type="text" class="input-form__txt" id="email" placeholder="البريد الالكترونى">
+                </div>
+
+                <!--اسم مسئول التواصل-->
+                <div class="input-form">
+                    <label class="input-form__label" for="communication-person-name-arabic">
+                        اسم مسئول التواصل
+                    </label>
+                    <input type="text" class="input-form__txt" id="communication-person-name-arabic" placeholder="اسم مسئول التواصل باللغة العربية">
+                    <input type="text" class="input-form__txt" id="communication-person-name-english" placeholder="اسم مسئول التواصل باللغة الانجليزية">
+                </div>
+
+                <!--المسمى الوظيفى-->
+                <div class="input-form">
+                    <label class="input-form__label" for="job-title-arabic">
+                        اسم مسئول التواصل
+                    </label>
+                    <input type="text" class="input-form__txt" id="job-title-arabic" placeholder="المسمى الوظيفى باللغة العربية">
+                    <input type="text" class="input-form__txt" id="job-title-english" placeholder="المسمى الوظيفى باللغة الانجليزية">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="submit-btn-container">
+                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded" >اضف مصنعك</button>
                 </div>
             </div>
         </div>
