--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -160,32 +160,32 @@
 <!-----------------------------------------------third Page Create Factory--------------------->
 
 <!--Create factory form-->
-<section class="Create-Factory">
+<!-- <section class="Create-Factory">
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col"> -->
 
                 <!-- اسم الشركة / المصنع-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="Factoryname-arabic">
                         اسم الشركة / المصنع
                     </label>
                     <input type="text" class="input-form__txt" id="Factoryname-arabic" placeholder="اسم الشركة / المصنع باللغة العربية">
                     <input type="text" class="input-form__txt" id="Factoryname-english" placeholder="اسم الشركة / المصنع باللغة الانجليزية">
 
-                </div>
+                </div> -->
 
                 <!--عن الشركة / المصنع-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="about-Factory-arabic">
                         عن الشركة / المصنع
                     </label>
                     <textarea type="text" class="input-form__txt" id="about-Factory-arabic" placeholder="نبذة عن الشركة / المصنع باللغة العربية"></textarea>
                     <textarea type="text" class="input-form__txt" id="about-Factory-english" placeholder="نبذة عن الشركة / المصنع باللغة الانجليزية"></textarea>
-                </div>
+                </div> -->
 
                 <!--نوع القطاع-->
-                <div class="input-form position-relative">
+                <!-- <div class="input-form position-relative">
                     <label class="input-form__label select__label" for="Factory-sector">
                         نوع القطاع
                     </label>
@@ -195,62 +195,62 @@
                         
                     </select>
                     <span class="icon-Icon-arrow rotate-down black-colored-txt drop-down-arrow select-arrow"></span>
-                </div>
+                </div> -->
 
                 <!--  العنوان-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="Factory-address-arabic">
                         العنوان
                     </label>
                     <input type="text" class="input-form__txt" id="Factory-address-arabic" placeholder="العنوان باللغة العربية">
                     <input type="text" class="input-form__txt" id="Factory-address-english" placeholder="العنوان باللغة الانجليزية">
 
-                </div>
+                </div> -->
 
                 <!--الهاتف-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="phone-number">
                         العنوان
                     </label>
                     <input type="text" class="input-form__txt" id="phone-number" placeholder="رقم الهاتف">
 
-                </div>
+                </div> -->
 
                 <!--فاكس-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="fax-number">
                         فاكس
                     </label>
                     <input type="text" class="input-form__txt" id="fax-number" placeholder="رقم الفاكس">
-                </div>
+                </div> -->
 
                 <!--الموقع الالكترونى-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="website">
                         الموقع الالكترونى
                     </label>
                     <input type="text" class="input-form__txt" id="website" placeholder="الموقع الالكترونى">
-                </div>
+                </div> -->
 
                 <!--البريد الالكترونى-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="email">
                         البريد الالكترونى
                     </label>
                     <input type="text" class="input-form__txt" id="email" placeholder="البريد الالكترونى">
-                </div>
+                </div> -->
 
                 <!--اسم مسئول التواصل-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="communication-person-name-arabic">
                         اسم مسئول التواصل
                     </label>
                     <input type="text" class="input-form__txt" id="communication-person-name-arabic" placeholder="اسم مسئول التواصل باللغة العربية">
                     <input type="text" class="input-form__txt" id="communication-person-name-english" placeholder="اسم مسئول التواصل باللغة الانجليزية">
-                </div>
+                </div> -->
 
                 <!--المسمى الوظيفى-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="job-title-arabic">
                         اسم مسئول التواصل
                     </label>
@@ -267,7 +267,60 @@
             </div>
         </div>
     </div>
+</section> -->
+
+<!---------------------------------------------Fourth Page Contact Us------------------>
+
+<!--Contact Us Form-->
+<section class="Contact-us">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                 <!-- الاسم-->
+                 <div class="input-form">
+                    <label class="input-form__label" for="name-arabic">
+                        الاسم
+                    </label>
+                    <input type="text" class="input-form__txt" id="name-arabic" placeholder="الاسم بالكامل">
+                </div>
+
+                <!--البريد الالكترونى-->
+                <div class="input-form">
+                    <label class="input-form__label" for="contact-email">
+                        البريد الالكترونى
+                    </label>
+                    <input type="text" class="input-form__txt" id="contact-email" placeholder="البريد الالكترونى">
+                </div>
+
+                <!--عنوان الموضوع-->
+                <div class="input-form">
+                    <label class="input-form__label" for="contact-email">
+                        عنوان الموضوع
+                    </label>
+                    <input type="text" class="input-form__txt" id="contact-email" placeholder="عنوان الموضوع">
+                </div>
+
+                <!--الرسالة-->
+                <div class="input-form">
+                    <label class="input-form__label" for="contact-email">
+                        الرسالة
+                    </label>
+                    <textarea type="text" class="input-form__txt" id="contact-email" placeholder="نص الرسالة"></textarea>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="submit-btn-container">
+                    <button class="btn--submit btn--trasnparent btn-txt--green btn--lit-rounded" >ارسال</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
 <!--Footer-->
 <footer>
     <!--slider-->
