side menue search

--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -7,3 +7,6 @@ $paragraph-color:#4D4D4D;
 $paragraph-bg-color:#ECECEC;
 $paragraph-sec-color:#262323;
 $light-grey:#919191;
+$secoundry-light-grey:#F3F5F8;
+$light-grey-txt:#212121;
+$shadow-grey:#D1D1D1;
