--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 <!-- <slides-carousel></slides-carousel> -->
 
 <!--industrial-section-->
-<!-- <section class="industrial-sector">
+ <!-- <section class="industrial-sector">
     <aside class=" side-menue side-menue--right">
         <div class="side-menue-image-container">
             <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
@@ -45,7 +45,7 @@
         <div class="industrial-sector-header-container">
             <h3 class="industrial-sector__header-txt">القطاعات الصناعية</h3>
         </div>
-    <muilt-rows-slider></muilt-rows-slider>
+        <muilt-rows-slider></muilt-rows-slider>
     </div>
 
     <aside class=" side-menue side-menue--left">
@@ -66,7 +66,7 @@
             </div>
         </div>
     </aside>
-</section> -->
+</section>  -->
 
 
 <!--about Section -->
@@ -272,43 +272,43 @@
 <!---------------------------------------------Fourth Page Contact Us------------------>
 
 <!--Contact Us Form-->
-<section class="Contact-us">
+<!-- <section class="Contact-us">
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col"> -->
                  <!-- الاسم-->
-                 <div class="input-form">
+                 <!-- <div class="input-form">
                     <label class="input-form__label" for="name-arabic">
                         الاسم
                     </label>
                     <input type="text" class="input-form__txt" id="name-arabic" placeholder="الاسم بالكامل">
-                </div>
+                </div> -->
 
                 <!--البريد الالكترونى-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="contact-email">
                         البريد الالكترونى
                     </label>
                     <input type="text" class="input-form__txt" id="contact-email" placeholder="البريد الالكترونى">
-                </div>
+                </div> -->
 
                 <!--عنوان الموضوع-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="contact-email">
                         عنوان الموضوع
                     </label>
                     <input type="text" class="input-form__txt" id="contact-email" placeholder="عنوان الموضوع">
-                </div>
+                </div> -->
 
                 <!--الرسالة-->
-                <div class="input-form">
+                <!-- <div class="input-form">
                     <label class="input-form__label" for="contact-email">
                         الرسالة
                     </label>
                     <textarea type="text" class="input-form__txt" id="contact-email" placeholder="نص الرسالة"></textarea>
-                </div>
+                </div> -->
 
-            </div>
+            <!-- </div>
         </div>
 
         <div class="row">
@@ -319,7 +319,96 @@
             </div>
         </div>
     </div>
+</section> -->
+
+<!---------------------------------------------fifth Page Factories sectors------------------>
+<section class="factories-sectors">
+    <!--filter side-->
+    <aside class="side-menue-filter">
+        <div class="input-form-search">
+            <input type="text" class="input-form-search__txt big-font-placeholder"  placeholder="الشركة">
+            <span class="icon-Icon-Search "></span>
+        </div>
+
+        <div class="input-form-search">
+            <div class="input-form position-relative mb-1">
+                <select  class="input-form__select" id="city-name" >
+                    <option value="المدينه">المدينه</option>
+                    <option value="دبي">دبي</option>
+                    
+                </select>
+                <span class="icon-Icon-arrow rotate-down black-colored-txt drop-down-arrow small-select-arrow"></span>
+            </div>
+
+            <div class="input-form position-relative mb-1">
+                <select  class="input-form__select" id="Factory-sector" >
+                    <option value="القطاع">القطاع</option>
+                    <option value="الصناعي">الصناعي</option>
+                </select>
+                <span class="icon-Icon-arrow rotate-down black-colored-txt drop-down-arrow small-select-arrow"></span>
+            </div>
+        </div>
+
+        <div class="submit-btn-container w-100  ">
+            <button class="btn--search btn--trasnparent btn-txt--black btn--lit-rounded btn-border--black w-100" >بحث</button>
+        </div>
+
+        <div class="filter-accordion">
+            <div class="card">
+              <div class="search-accordion-card-header" id="headingOne">
+                  <button class="search-accordion-card-header__btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                   القطاع الصناعي
+                  </button>
+                  <span class="icon-Icon-arrow  drop-down-arrow"></span>
+              </div>
+          
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent=".filter-accordion">
+                <div class="card-body">
+                    <ul class="search-options-list">
+                        <li class="search-option">الصناعات الخشبية والاثاث</li>
+                        <li class="search-option">الصناعات الخشبية والاثاث</li>
+                        <li class="search-option">الصناعات الخشبية والاثاث</li>
+                        <li class="search-option">الصناعات الخشبية والاثاث</li>
+                        <li class="search-option">الصناعات الخشبية والاثاث</li>
+                    </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+    </aside>
+
+
+    <div class="search-results-container">
+        <div class="search-result-card">
+            
+        </div>
+    </div>
+
+    <aside class=" side-menue side-menue--left">
+        <div class="side-menue-image-container">
+            <img class="side-menue__image" src="../assets/images/aside-header-bg.jpg" alt="aside-bg">
+        </div>
+        <div class="side-menue-details">
+            <div class="side-menue-details-header-container">
+                <h5 class="side-menue__header">القطاعات الصناعيه</h5>
+            </div>
+            <div class="side-menue-details-body">
+                <p class="side-menue__details">لوريم إيبسوم(Lorem Ipsum)
+                     هو ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) 
+                     ويُستخدم في صناعات المطابع  ودور النشر.
+                     كان لوريم إيبسوم ولايزال المعيار 
+                     للنص الشكلي منذ القرن الخامس عشر 
+                     عندما قامت مطبعة مجهولة برص مجموعة من </p>
+            </div>
+        </div>
+    </aside>
+
+
 </section>
+
+
+
 
 <!--Footer-->
 <footer>
