pre search page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -380,8 +380,32 @@
 
 
     <div class="search-results-container">
-        <div class="search-result-card">
-            
+        <div class="search-result-card search-result-card--sm">
+            <div class="search-result-card-image-container shadow">
+                <img class="search-result-card__img" src="../assets/images/c1.jpg" alt="card-img">
+            </div>
+            <div class="search-result-card-info">
+                <div class="search-result-card-header-container">
+                    <h3 class="search-result-card__header">شركة قطر للمواد الاولية</h3>
+                </div>
+                <div class="search-result-card-details-container">
+                    <p class="search-result-card-details__txt">
+                        تأسست شركة قطر للمواد الأولية بناء على تعليمات من الحكومة القطرية في العام 2006 من أجل ضمان إمدادات مواد البناء في السوق المحلية تمتلك الشركة و تشغّل احتياطيات استراتيجية من المواد الأولية داخل دولة قطر، كما توفر حلولا متكاملة في مجالات عدة منها : إدارة الموانئ , العمليات اللوجستية و الإمداد , التخزين و توزيع المواد الأولية الرئيسية لتلبية 
+                       
+                    </p>
+                </div>
+                <div class="search-result-card-contacts-container">
+                    <ul class="search-card-contacts-list">
+                        <li class="search-card-contact "> 974-44479411 <span class="icon-Icon-telephone contact-icon "></span>+</li>
+                        <li class="search-card-contact">info@qpmc.qa <span class="icon-Icon-email contact-icon "></span></li>
+                        <li class="search-card-contact">+974-44479422<span class="icon-Icon-print contact-icon "></span>+</li>
+                        <li class="search-card-contact">www.qpmc.qa<span class="icon-Icon-globe contact-icon "></span></li>
+    
+                        
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </div>
 
