--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -10,3 +10,6 @@ $light-grey:#919191;
 $secoundry-light-grey:#F3F5F8;
 $light-grey-txt:#212121;
 $shadow-grey:#D1D1D1;
+$light-grey-bg:#ECF0F1;
+$dark-grey-txt:#656565;
+$light-red:#FF0000;
