--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
  @import 'components/muilt-row-slider';
  @import 'components/input-form';
  @import 'components/accordion-search';
+ @import 'components/info-card';
 /*Import pages*/
 @import'pages/home.scss';
 @import 'pages/about-portal.scss';
